--- a/cas-support-mobileid/src/main/resources/mobileid_messages_ru.properties
+++ b/cas-support-mobileid/src/main/resources/mobileid_messages_ru.properties
@@ -1,3 +1,19 @@
+#
+#   Copyright 2017 Nortal AS
+#
+#   Licensed under the Apache License, Version 2.0 (the "License");
+#   you may not use this file except in compliance with the License.
+#   You may obtain a copy of the License at
+#
+#       http://www.apache.org/licenses/LICENSE-2.0
+#
+#   Unless required by applicable law or agreed to in writing, software
+#   distributed under the License is distributed on an "AS IS" BASIS,
+#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#   See the License for the specific language governing permissions and
+#   limitations under the License.
+#
+
 
 error.authentication.credentials.bad.mobile_id = \u041E\u0448\u0438\u0431\u043A\u0430 \u0438\u0434\u0435\u043D\u0442\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u0438 \u0441 \u043F\u043E\u043C\u043E\u0449\u044C\u044E Mobile-ID
 
