mobileid: support checking for both idcode and phone number

--- a/cas-support-mobileid/src/main/resources/mobileid_messages_en.properties
+++ b/cas-support-mobileid/src/main/resources/mobileid_messages_en.properties
@@ -19,7 +19,7 @@ error.authentication.credentials.bad.mobile_id = Authentication with Mobile-ID f
 
 login.mobile_id.error.100                     = Service error.
 login.mobile_id.error.101                     = Mobile number or personal identification code is in incorrect form.
-login.mobile_id.error.102                     = Mobile number or personal identification code is undetermined.
+login.mobile_id.error.102                     = Mobile number or personal identification code is missing.
 login.mobile_id.error.103                     = No authentication rights to log in via Mobile-ID. Contact the Support Centre.
 login.mobile_id.error.200                     = Mobile-ID service error
 login.mobile_id.error.201                     = Your certificate is missing in the server.
@@ -47,3 +47,4 @@ login.mobile_id.rm.error.canContainOnlyDigits = Please check the phone number th
 login.mobile_id.rm.error.numberIsTooLong      = The phone number may contain up to eight digits, excluding the country calling code.
 login.mobile_id.startingSession               = Please wait, your Mobile-ID authentication session is starting.
 login.mobile_id.submit                        = Submit
+login.mobile_id.error.invalidIdCode			  = Personal identification code is invalid.
