--- a/cas-support-mobileid/src/main/resources/mobileid_messages_et.properties
+++ b/cas-support-mobileid/src/main/resources/mobileid_messages_et.properties
@@ -47,3 +47,4 @@ login.mobile_id.rm.error.canContainOnlyDigits = Palun kontrollige sisestatud tel
 login.mobile_id.rm.error.numberIsTooLong      = Telefoninumber ilma riigikoodita v\u00F5ib koosneda k\u00F5ige rohkem kaheksast numbrist.
 login.mobile_id.startingSession               = Palun oodake, algab Mobiil-ID-ga autentimine.
 login.mobile_id.submit                        = Sisene
+login.mobile_id.error.invalidIdCode			  = Isikukood ei ole korrektsel kujul.
